RESOLVED FIXED57091
<keygen> does not support autofocus
https://bugs.webkit.org/show_bug.cgi?id=57091
Summary <keygen> does not support autofocus
Dominic Cooney
Reported 2011-03-25 00:28:02 PDT
The keygen element does not support the autofocus attribute. When a keygen element has the autofocus attribute, it does not automatically get focus.
Attachments
Patch (3.50 KB, patch)
2011-03-25 00:31 PDT, Dominic Cooney
no flags
Patch (3.47 KB, patch)
2011-03-25 00:52 PDT, Dominic Cooney
no flags
Dominic Cooney
Comment 1 2011-03-25 00:31:12 PDT
Kent Tamura
Comment 2 2011-03-25 00:44:06 PDT
Comment on attachment 86905 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=86905&action=review > LayoutTests/fast/forms/autofocus-keygen.html:16 > + shouldBe('focusedElement', 'document.querySelector("keygen")'); I think document.activeElement works instead of focusedElement. > LayoutTests/fast/forms/autofocus-keygen.html:23 > +successfullyParsed = true; > +</script> > +</head> > +<body onload="onLoad();"> This doesn't follow usual style of our layout tests. Please do: - remove layoutTestController.dumpAsText() in the second <script> - add window.jsTestisAsync = true in the second <script> - add finishJSTest() at the bottom of onLoad() - add <script> for js/resources/js-test-post.js at the bottom of <body>
Dominic Cooney
Comment 3 2011-03-25 00:52:50 PDT
Kent Tamura
Comment 4 2011-03-25 00:55:10 PDT
Comment on attachment 86907 [details] Patch ok
WebKit Commit Bot
Comment 5 2011-03-25 01:18:50 PDT
Comment on attachment 86907 [details] Patch Clearing flags on attachment: 86907 Committed r81947: <http://trac.webkit.org/changeset/81947>
WebKit Commit Bot
Comment 6 2011-03-25 01:18:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.