2011-03-25  Dominic Cooney  <dominicc@google.com>

Reviewed by Kent Tamura.

        Adds a regression test for keygen autofocus.
        https://bugs.webkit.org/show_bug.cgi?id=57091

        * fast/forms/autofocus-keygen-expected.txt: Added.
        * fast/forms/autofocus-keygen.html: Added.
2011-03-25  Dominic Cooney  <dominicc@google.com>

        Reviewed by Kent Tamura.

        Makes keygen support autofocus attribute.
        https://bugs.webkit.org/show_bug.cgi?id=57091

        Test: fast/forms/autofocus-keygen.html

        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::attach):

Canonical link: https://commits.webkit.org/71755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81947 268f45cc-cd09-0410-ab3c-d52691b4dbfc